# SmoCAD

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  KeyboardMouseHandler.cpp  KeyboardMouseHandler.h  README.md  SceneModel.cpp  SceneModel.h  SmoCAD_en_GB.ts  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: cmake.yml
Controls/: ComponentControl.cpp  ComponentControl.h  CustomQListWidget.cpp  CustomQListWidget.h  EntityContextMenu.cpp  EntityContextMenu.h  QListWidgetRenderableItem.cpp  QListWidgetRenderableItem.h  controls.cpp  controls.h  controls.ui  cursorcontrol.cpp  cursorcontrol.h  cursorcontrol.ui  intersectionawarecontrol.cpp  intersectionawarecontrol.h  intersectionawarecontrol.ui  intersectionresultcontrol.cpp  intersectionresultcontrol.h  intersectionresultcontrol.ui  sceneelementslist.cpp  sceneelementslist.h  sceneelementslist.ui  simulator3ccontrol.cpp  simulator3ccontrol.h  simulator3ccontrol.ui  stereoscopicconfig.cpp  stereoscopicconfig.h  stereoscopicconfig.ui  transformcollectioncontrol.cpp  transformcollectioncontrol.h  transformcollectioncontrol.ui  transformcontorol.cpp  transformcontorol.h  transformcontorol.ui  transformcontrol.cpp  transformcontrol.h  transformcontrol.ui  uvcontrol.cpp  uvcontrol.h  (+4 more)
Controls/Dialogs/: intersectiondialog.cpp  intersectiondialog.h  intersectiondialog.ui  parametersintersectiondialog.cpp  parametersintersectiondialog.h  parametersintersectiondialog.ui
Controls/ListElements/: QListWidgetCollectionElement.cpp  QListWidgetCollectionElement.h  QListWidgetSceneElement.cpp  QListWidgetSceneElement.h
FileManagers/: CutterPath.cpp  CutterPath.h  GCodeLoader.h  GCodeSaver.cpp  GCodeSaver.h
Loaders/: GCodeLoader.cpp  GCodeLoader.h
Mathematics/: GeometryRelation.cpp  GeometryRelation.h  Interpolation.cpp  Interpolation.h  Optimization.cpp  Optimization.h  PlaneDivision.cpp  PlaneDivision.h  PointShapes.cpp  PointShapes.h  PolylineOperations.cpp  PolylineOperations.h  Polynomials.cpp  Polynomials.h  clapack.h  f2c.h
Mathematics/Units/: Distance.cpp  Distance.h  Length.cpp  Length.h  Time.cpp  Time.h  Unit.cpp  Unit.h  Velocity.cpp  Velocity.h
Objects/: BezierCurveC0.cpp  BezierCurveC0.h  CompositeObject.cpp  CompositeObject.h  CubeObject.cpp  CubeObject.h  CursorObject.cpp  CursorObject.h  IRenderableObject.cpp  IRenderableObject.h  PointObject.cpp  PointObject.h  TorusObject.cpp  TorusObject.h  TransformableObject.cpp  TransformableObject.h
Renderer/: BufferLayout.cpp  BufferLayout.h  LazyRenderer.cpp  LazyRenderer.h  Options.cpp  Options.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  ShaderWrapper.cpp  ShaderWrapper.h
Renderer/Camera/: OrbitalCamera.cpp  OrbitalCamera.h  StereoscopicParameters.cpp  StereoscopicParameters.h  Viewport.cpp  Viewport.h
Renderer/InputController/: InputController.cpp  InputController.h  cameramovementevent.cpp  cameramovementevent.h
Scene/: SceneECS.cpp  SceneECS.h  SceneModel.cpp  SceneModel.h  SceneModelOld.cpp  SceneModelOld.h
Scene/Components/: CollectionAware.cpp  CollectionAware.h  CompositeAware.cpp  CompositeAware.h  Drawing.cpp  Drawing.h  FillAware.cpp  FillAware.h  IComponent.cpp  IComponent.h  IntersectionResult.cpp  IntersectionResult.h  Merge.cpp  Merge.h  SceneElement.cpp  SceneElement.h  ScreenSelectable.cpp  ScreenSelectable.h  Selectable.cpp  Selectable.h  Simulator3CComponent.cpp  Simulator3CComponent.h  Transform.cpp  Transform.h  TransformCollection.cpp  TransformCollection.h  UVParams.cpp  UVParams.h  UvPlainCreator.cpp  UvPlainCreator.h  UvPlaneCreator.cpp  UvPlaneCreator.h
Scene/Entities/: BezierC0.cpp  BezierC0.h  BezierC2.cpp  BezierC2.h  Composite.cpp  Composite.h  Cube.cpp  Cube.h  Cursor.cpp  Cursor.h  Grid.cpp  Grid.h  IEntity.cpp  IEntity.h  Mesh.cpp  Mesh.h  Point.cpp  Point.h  Polyline.cpp  Polyline.h  SelectRectangle.cpp  SelectRectangle.h  Torus.cpp  Torus.h  VirtualBezierC0.cpp  VirtualBezierC0.h  VirtualPoint.cpp  VirtualPoint.h
Scene/Events/: CursorChangedEvent.cpp  CursorChangedEvent.h  PointObjectChangedEvent.cpp  PointObjectChangedEvent.h  SelectedObjectChangedEvent.cpp  SelectedObjectChangedEvent.h
Scene/Systems/: CollectionAwareSystem.cpp  CollectionAwareSystem.h  CompositeAwareSystem.cpp  CompositeAwareSystem.h  DrawingSystem.cpp  DrawingSystem.h  FillAwareSystem.cpp  FillAwareSystem.h  IAbstractSystem.cpp  IAbstractSystem.h  ISystem.cpp  ISystem.h  IntersectionResultSystem.cpp  IntersectionResultSystem.h  MergeSystem.cpp  MergeSystem.h  SceneElementSystem.cpp  SceneElementSystem.h  ScreenSelectableSystem.cpp  ScreenSelectableSystem.h  SelectableSystem.cpp  SelectableSystem.h  Simulator3CSystem.cpp  Simulator3CSystem.h  TransformCollectionSystem.cpp  TransformCollectionSystem.h  TransformSystem.cpp  TransformSystem.h  UVParamsSystem.cpp  UVParamsSystem.h  UvPlaneCreatorSystem.cpp  UvPlaneCreatorSystem.h
Scene/Utilities/: QImageOperator.cpp  QImageOperator.h  TypeMap.cpp  TypeMap.h  TypeNumbering.cpp  TypeNumbering.h  Utilites.cpp  Utilites.h
Shaders/: bezier.eval  bezier.frag  bezier.tess  bezier.vert  bezierC2.eval  buffer_color.vert  plain.eval  plain.tess  plain.vert  select_rect.frag  select_rect.vert  simple_color.frag  test.vert  torus.frag  torus.vert  uniform_color.vert
Shaders/Compute/: prepareCutterStamp.comp  zmapConfiguration.comp
Shaders/Curves/: bezier.eval  bezier.tess  bezier.vert  bezierC2.eval  bezierC2.tesc  bezierC2.tese  bezierC2.vert
Shaders/Planes/: gregory_plane.eval  gregory_plane.tess  plane.eval  plane.frag  plane.tesc  plane.tese  planeC2.eval  planeC2.frag  planeC2.tese
Tests/: CMakeLists.txt  CommonTestClass.cpp  CommonTestClass.h  DeCasteljauTests.cpp  DeCasteljauTests.h  GeomteryRelationsTests.cpp  GeomteryRelationsTests.h  GradientMethodTests.cpp  GradientMethodTests.h  InterpolationC2Test.cpp  InterpolationC2Test.h  NewtonRaphsonTests.cpp  NewtonRaphsonTests.h  test_main.cpp
Tests/Units/: BaseUnitTests.cpp  BaseUnitTests.h  DistanceTests.cpp  DistanceTests.h
docs/: dokumentacja.ods  interpolacjac2
(+181 files in other folders)
